--- a/css/gwent_27.css
+++ b/css/gwent_27.css
@@ -1,6 +1,6 @@
 body {
 	font-family: Futura, 'Century Gothic', AppleGothic, sans-serif;
-	overflow: ;
+	overflow: hidden;
 	text-align: center;
 	background-image: url("../img/wood.jpg");
 	background-repeat: repeat;
